feat: 사이드바 기능 구현 (key terms, key concepts, chatbot)

--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,9 @@ dist-ssr
 .env
 
 # Firebase
-/functions
+.firebase
 .firebaserc
+functions
 firebase.json
 firestore.indexes.json
 firestore.rules
