--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "file-saver": "^2.0.5",
     "firebase": "^10.12.4",
+    "jspdf": "^2.5.1",
     "quill-to-pdf": "^1.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
